demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
spec:
  replicas: 1
  template:
    metadata:
      name: demo
      labels:
        app: demo
    spec:
      containers:
        - name: demo
          image: docker.io/luksa/kubia:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      restartPolicy: Always
  selector:
    matchLabels:
      app: demo
