demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: demo
